--- a/FileViewer.uplugin
+++ b/FileViewer.uplugin
@@ -3,13 +3,13 @@
 	"Version": 1,
 	"VersionName": "1.0",
 	"FriendlyName": "FileViewer",
-	"Description": "",
+	"Description": "File view plugin for listing ue4 loaded file assets",
 	"Category": "Other",
-	"CreatedBy": "",
-	"CreatedByURL": "",
-	"DocsURL": "",
+	"CreatedBy": "Naru",
+	"CreatedByURL": "http://blog.ch-wind.com/",
+	"DocsURL": "http://blog.ch-wind.com/ue4-pak-file-view/",
 	"MarketplaceURL": "",
-	"SupportURL": "",
+	"SupportURL": "https://github.com/Arisego/FileViewer/issues",
 	"CanContainContent": true,
 	"IsBetaVersion": false,
 	"Installed": false,
